examples of RDD Transformations and Actions